# DeskShow

./: CMakeLists.txt  README.en.md  README.md  main.cpp  openwidget.cpp  openwidget.h
src/: CMakeLists.txt  LAppDelegate.cpp  LAppLive2DManager.cpp  openwidget.cpp  openwidget.h
